--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <p class="text-xs  text-gray-500">National Emergency</p>
             <p class="text-lg font-bold mt-2">999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">All</span>
-            <div class="flex justify-between gap-2 mt-3 w-full">
-                <button class="copyBtn flex-1 px-4 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-4 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <!-- 2nd  -->
@@ -88,9 +88,9 @@
             <p class="text-xs  text-gray-500">Police</p>
             <p class="text-lg font-bold mt-2">999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Police</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Police" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -102,9 +102,9 @@
             <p class="text-xs  text-gray-500">Fire Service</p>
             <p class="text-lg font-bold mt-2">999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Fire</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Fire Service Number" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -116,9 +116,9 @@
             <p class="text-xs  text-gray-500">Ambulance</p>
             <p class="text-lg font-bold mt-2">1994-999999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Health</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="1994-999999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Ambulance Service" data-number="1994-999999"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -130,9 +130,9 @@
             <p class="text-xs  text-gray-500">Women & Child Helpline</p>
             <p class="text-lg font-bold mt-2">109</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Help</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="109"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Women & Child Helpline" data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -144,9 +144,9 @@
             <p class="text-xs  text-gray-500">Anti-Corruption</p>
             <p class="text-lg font-bold mt-2">106</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Govt.</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="106"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Anti-Corruption Helpline" data-number="106"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -158,9 +158,9 @@
             <p class="text-xs  text-gray-500">Electricity Outage</p>
             <p class="text-lg font-bold mt-2">16216</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Electricity</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="16216"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Electricity Helpline" data-number="16216"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -172,9 +172,9 @@
             <p class="text-xs  text-gray-500">Brac</p>
             <p class="text-lg font-bold mt-2">16445</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">NGO</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="16445"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Brac Helpline" data-number="16445"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
@@ -186,9 +186,9 @@
             <p class="text-xs  text-gray-500">Bangladesh Railway</p>
             <p class="text-lg font-bold mt-2">163</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Travel</span>
-            <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="163"><i class="fa-solid fa-copy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Bangladesh Railway Helpline" data-number="163"><i class="fa-solid fa-phone"></i> Call</button>
+            <div class="flex flex-col sm:flex-row  gap-2 mt-3 w-full">
+                <button class="copyBtn flex-1 px-3 py-2 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy mr-2"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-3 py-2 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone mr-2"></i> Call</button>
             </div>
         </div>
         
@@ -196,7 +196,7 @@
         <aside class="bg-white p-4 rounded shadow" id="historySection">
             <div class="flex justify-between items-center mb-2">
                 <h2> <i class="fa-regular fa-clock"></i> <span  class="font-bold">Call History</span></h2>
-                <button id="clearHistory" class="bg-[#00A63E] min-w-[100px] h[50px] px-4 py-1 items-center  text-center text-white rounded-3xl  hover:bg-green-700 transition">Clear</button>
+                <button id="clearHistory" class="bg-[#00A63E] min-w-[100px] h[50px] px-4 py-2 items-center  text-center text-white rounded-3xl  hover:bg-green-700 transition">Clear</button>
             </div>
             <ul id="historyList" class=" space-y-2 text-sm text-gray-700 rounded p-4"></ul>
         </aside>
